--- a/app/src/main/res/layout/samplelayout.xml
+++ b/app/src/main/res/layout/samplelayout.xml
@@ -34,6 +34,15 @@
                 android:layout_height="wrap_content"
                 android:text="Product Description"
                 android:textSize="16sp"/>
+
+            <TextView
+                android:id="@+id/editlbl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Edit"
+                android:textSize="16sp"
+                android:textColor="@color/red"/>
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
