--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -9,6 +9,20 @@
     android:orientation="vertical">
 
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="201dp"
+        android:layout_height="141dp"
+        android:layout_gravity="center"
+        app:srcCompat="@drawable/addphoto" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Click on img to Add"
+        android:id="@+id/clickMe"
+        android:layout_gravity="center"/>
+
     <EditText
         android:id="@+id/editTextText2"
         android:layout_width="match_parent"
@@ -38,4 +52,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Save Data" />
+
+
 </LinearLayout>
